give template preview table a max-width that stops it overflowing the screen width. Fixes #44

--- a/less/components/templates.less
+++ b/less/components/templates.less
@@ -15,6 +15,7 @@
 
 
 .templates {
+  .preview {max-width:60vw;}
     .template-filters {
         background: darken(@body-background-color,3%);
         //this padding stops content shwoing through at weird breakpoints;
